# amat

./: .gitignore  CMakeLists.txt  Makefile  README.md
amat/: amat.cc  amat.h  helpers.cc  helpers.h  lexer.cc  lexer.h  nfa.cc  nfa.h  parser.cc  parser.h  tokens.h
cmake/: amatConfig.cmake.in
include/: amat.h
include/amat/: helpers.h  lexer.h  nfa.h  parser.h  subset.h
test/: amat.cc  test.cc  test_runner  ttre.cc
ttre/: enum.h  helpers.cc  helpers.h  lexer.cc  lexer.h  nfa.cc  nfa.h  parser.cc  parser.h  tokens.h  ttre.cc  ttre.h  utilities.h
ttre/include/: lexer.h  tokens.h  ttre.h
ttre/src/: lexer.cc  ttre.cc
